--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+<link rel=
 <title>My Personal Website</title>
 </head>
 <body>
 <h1>XD Welcome to my portfolio</h1>
-
+<img src="photo
 <h2>About</h2>
 <p>My name is Ong Boon Kiat</p>
 <p>I am a 13 year old student in <a href="http://dunmanhigh.moe.edu.sg/">Dunman High School</a> and I am from class 1E. I was born into a mediocre family on 24th of November 2004. My brother was born 2 years later.</p>
