--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel=
+<link rel="stylesheet" href="style.css">
 <title>My Personal Website</title>
 </head>
 <body>
@@ -11,8 +11,9 @@
 <p>My name is Ong Boon Kiat</p>
 <p>I am a 13 year old student in <a href="http://dunmanhigh.moe.edu.sg/">Dunman High School</a> and I am from class 1E. I was born into a mediocre family on 24th of November 2004. My brother was born 2 years later.</p>
 <h2>Interest</h2>
-<p>I like to play video games like <a href="http://supercell.com/en/games/clashroyale/">Clash Royale</a>, <a href="http://supercell.com/en/games/clashofclans/">Clash of clans</a>, <a href="http://pixelgun3d.com/">Pixel Gun 3D< and <a href="http://starwars.ea.com/starwars/battlefront">Star Wars Battlefront</a><p>I also like watching cartoon series like <a href="https://www.lego.com/en-us/ninjago">Ninjago</a> and Transformers Prime.<
-<p>I also like to watch cartoon series like <a href='https://www.lego.com/en-us/ninjago">Ninjago</a> and Transformers Prime.</p>
+<p>I like to play video games like <a href="http://supercell.com/en/games/clashroyale/">Clash Royale</a>, <a href="http://supercell.com/en/games/clashofclans/">Clash of clans</a>, <a href="http://pixelgun3d.com/">Pixel Gun 3D/a>and <a href="http://starwars.ea.com/starwars/battlefront">Star Wars Battlefront</a>
+<p>I also like watching cartoon series like <a href="https://www.lego.com/en-us/ninjago">Ninjago</a> and Transformers Prime.</p>
+
 <h2>Accomplishements</h2>
 <p>I have been awarded silver for ACJC's Little Professor when I was primary 5.</p>
 </body>
