--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
 
 <h2>Accomplishements</h2>
 <p>I have been awarded silver for ACJC's Little Professor when I was primary 5.</p>
+
+
+
+<script type='text/javascript' id='susi-bot-script' data-userid='4be03905937fc48529ec4c35664767a3' data-group='Games, Trivia and Accessories' data-language='en' data-skill='Trivia on PUBG vehicles' src='https://skills.susi.ai/susi-chatbot.js'></script>
 </body>
 </html>
